# pitchforge

./: .gitignore  CLAUDE.md  LICENSE  graph.py  main.py  setup_rag.py  state.py
backend/: CLAUDE.md  pyproject.toml
backend/app/: main.py  runner.py  schemas.py
backend/app/routers/: proposals.py
chromadb/: chroma.sqlite3
frontend/: CLAUDE.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Logo.jsx
frontend/src/pages/: AnalyzePipeline.jsx  GenerateProposal.jsx  JobDetails.jsx  Landing.jsx
nodes/: analyzer.py  critic.py  fit_checkpoint.py  generator.py  retriever.py  scorer.py
pitchforge/: CLAUDE.md  graph.py  main.py  pyproject.toml  setup_rag.py  state.py
pitchforge/chromadb/: chroma.sqlite3
pitchforge/nodes/: analyzer.py  compiler.py  critic.py  fit_checkpoint.py  generator.py  human_checkpoint.py  retriever.py  scorer.py
pitchforge/profile/: profile.json
