[project]
name = "pitchforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "flashrank>=0.2.9",
    "httpx>=0.28.1",
    "langchain-google-genai>=4.2.2",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["pitchforge*"]
